<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="NestedWeights">

    <TextView
        android:id="@+id/areaLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/area_label"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prefLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/pref_label"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/prefSpinner"
        app:layout_constraintStart_toStartOf="@+id/prefSpinner"
        app:layout_constraintTop_toBottomOf="@+id/areaLabel" />

    <Spinner
        android:id="@+id/prefSpinner"
        style="@android:style/Widget.Spinner"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toStartOf="@+id/areaLabel"
        app:layout_constraintTop_toBottomOf="@+id/prefLabel" />

    <Spinner
        android:id="@+id/citySpinner"
        style="@android:style/Widget.Spinner"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toEndOf="@+id/areaLabel"
        app:layout_constraintTop_toBottomOf="@+id/cityLabel" />

    <TextView
        android:id="@+id/cityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/city_label"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/citySpinner"
        app:layout_constraintStart_toStartOf="@+id/citySpinner"
        app:layout_constraintTop_toBottomOf="@+id/areaLabel" />

    <LinearLayout
        android:id="@+id/weatherContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prefSpinner">

        <LinearLayout
            android:id="@+id/weatherTable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:background="@drawable/weather_container_bg"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/todayWeather"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#009688"
                    android:text="@string/date_label_today"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/weatherImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/weather_image_description"
                    android:padding="18dp"
                    android:paddingBottom="8dp"
                    app:srcCompat="@drawable/picture" />

                <TextView
                    android:id="@+id/telopText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="top"
                    android:text="ー"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/maxTempText"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="#FFE6E6"
                    android:gravity="center"
                    android:text="-"
                    android:textAlignment="center"
                    android:textColor="@color/maxTempText"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/minTempText"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="8dp"
                    android:background="#E6E6FF"
                    android:gravity="center"
                    android:text="-"
                    android:textAlignment="center"
                    android:textColor="@color/minTempText"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/day2Weather"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#4CAF50"
                    android:text="@string/date_label_2day"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/weatherImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/weather_image_description"
                    android:padding="18dp"
                    app:srcCompat="@drawable/picture" />

                <TextView
                    android:id="@+id/telopText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="top"
                    android:text="ー"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/maxTempText"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="#FFE6E6"
                    android:gravity="center"
                    android:text="-"
                    android:textAlignment="center"
                    android:textColor="@color/maxTempText"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/minTempText"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="8dp"
                    android:background="#E6E6FF"
                    android:gravity="center"
                    android:text="-"
                    android:textAlignment="center"
                    android:textColor="@color/minTempText"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/day3Weather"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dateLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#8BC34A"
                    android:text="@string/date_label_3day"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/weatherImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/weather_image_description"
                    android:padding="18dp"
                    app:srcCompat="@drawable/picture" />

                <TextView
                    android:id="@+id/telopText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="top"
                    android:text="ー"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/maxTempText"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="10dp"
                    android:background="#FFE6E6"
                    android:gravity="center"
                    android:text="-"
                    android:textAlignment="center"
                    android:textColor="@color/maxTempText"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/minTempText"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="8dp"
                    android:background="#E6E6FF"
                    android:gravity="center"
                    android:text="-"
                    android:textAlignment="center"
                    android:textColor="@color/minTempText"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/descriptionScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/description_bg"
                    android:padding="5dp"
                    android:scrollbars="vertical"
                    android:text="・・・"
                    android:textColor="#303030"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>